# viz_isabel

./: .gitignore  CMakeLists.txt  README.md
data/: readme.html  wget-isabeldata-all.sh  wget-isabeldata-custom.sh  wget-isabeldata-selected.sh
old_py/: main.py
src/: main.cpp  test_app.cpp  test_app.h  viz_app.cpp  viz_app.h
src/core/: app.cpp  app.h  arrays.h  common.cpp  common.h  window.cpp  window.h
src/graphics/: camera.cpp  camera.h  framebuffer.cpp  framebuffer.h  imgui_context.cpp  imgui_context.h  primitives.cpp  primitives.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h
src/imgui/: imgui_impl_opengl3.cpp
src/shaders/: cut.fs  cut.vs  hgt.fs  hgt.vs  line.fs  line.vs  test.fs  test.vs
